# Lloyd_clustering

./: README.md  pyproject.toml  requirements.txt
algorithms/: lloyd_clustering.py
algorithms/.ipynb_checkpoints/: lloyd_clustering-checkpoint.py
data/: data02.txt  data20.txt  data_04.txt  data_05.txt  data_10.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  data_9.txt
notebooks/: graphs.ipynb  test_and_bench.ipynb  test_and_bench.py
notebooks/.ipynb_checkpoints/: graphs-checkpoint.ipynb  test_and_bench-checkpoint.ipynb
output/output/: output_mem_center_base.csv  output_mem_center_dask.csv  output_mem_center_numpy.csv  output_mem_dimension_base.csv  output_mem_sample_base.csv  output_mem_sample_dask.csv  output_mem_sample_numpy.csv  output_time_center_base.csv  output_time_center_dask.csv  output_time_center_numpy.csv  output_time_dimension_base.csv  output_time_dimension_dask.csv  output_time_dimension_numpy.csv  output_time_sample_base.csv  output_time_sample_dask.csv  output_time_sample_numpy.csv
setup_scripts/: install_venv.sh
