[tool.poetry]
name = "lloyd_clustering"
version = "0.1.0"
description = ""
authors = ["Ben De Meurichy <ben.demeurichy@ugent.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy="2.0.0rc1"
dask="2024.4.2"
scikit-learn="1.4.2"
jupyter = "^1.0.0"
memray = "^1.12.0"
logger = "^1.4"
ruff = "^0.4.1"
line-profiler-pycharm = "^1.1.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
